--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-cool-react-app",
-  "version": "0.0.1-alpha.0",
+  "version": "0.0.1",
   "description": "Create a React app with a neat build configuration",
   "bin": {
     "create-cool-react-app": "./src/index.js"
